<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="cursive"
        android:text="@string/choose_your_day"
        android:textSize="35sp"
        android:textAlignment="center"
        android:textStyle="bold|italic" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_mon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:textAllCaps="true"
        android:text="@string/monday" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_tue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:textAllCaps="true"
        android:text="@string/tuesday" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_wed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/wednesday" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_thur"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/thursday" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_fri"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/friday" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/saturday" />

</LinearLayout>